--- a/tests/PCTCompile/test58/build.xml
+++ b/tests/PCTCompile/test58/build.xml
@@ -17,16 +17,33 @@
 
   <target name="build">
     <mkdir dir="build" />
-    <PCTCompile destDir="build" dlcHome="${DLC}" languages="French,German" textGrowth="200">
+    <PCTCompile destDir="build" dlcHome="${DLC}" languages="French,German" textGrowth="200" relativePaths="true">
       <DBConnection dbDir="db" dbName="xlatedb" singleUser="true" />
       <fileset dir="src" includes="**/*.p" />
       <fileset dir="src2/subdir" includes="**/*.p" />
-      <propath location="src,src2/subdir" />
+      <propath>
+        <pathelement location="src" />
+        <pathelement location="src2/subdir" />
+      </propath>
     </PCTCompile>
   </target>
 
-  <target name="test">
-      <PCTRun procedure="src/test.p" dlcHome="${DLC}" />
+  <target name="test-fr">
+    <PCTRun procedure="test.p" dlcHome="${DLC}">
+      <Option name="-lng" value="French" />
+      <propath>
+        <pathelement location="build" />
+      </propath>
+    </PCTRun>
+  </target>
+
+  <target name="test-de">
+    <PCTRun procedure="test.p" dlcHome="${DLC}">
+      <Option name="-lng" value="German" />
+      <propath>
+        <pathelement location="build" />
+      </propath>
+    </PCTRun>
   </target>
 
 </project>
